# OLManager

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CHAMPION_IMAGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY-DOCKER.md  DEPLOY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.web  Dockerfile.web.dockerignore  LOL_SIM_V2_REFACTOR_GUIDE.md  MAINTAINERS.md  PROJECT_ANALYSIS.md  README.md  SECURITY.md  add-outlines.mjs  add_outlines.py  docker-compose.yml  fly.toml  index.html  lol_esports_league_map_v2.html  multiplayer_compatibility_report.md  package-lock.json  package.json  tsconfig.release.json  vercel.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
docker/: nginx.conf
docs/: DATA_PROVENANCE.md  GAME_CREATION_FLOW.md  INHERITED_DOCS_AUDIT.md  README.md  arquitectura-datos.md  data-model.md  multi-league-analysis.md  stats-atributos.md
e2e/: README.md  multiplayer-components.spec.ts  multiplayer-integration.spec.ts  multiplayer.spec.ts  playwright.config.ts
scraper/: .gitignore  PHASE-0-REPORT.md  package-lock.json  package.json  test-api.py  test-api2.py  test-debug.py  test-debug2.py  test-logo-strategy.py  test-simple.py
scripts/: copy-legacy.ps1  generate-skin-manifest.ts  generate-splash-manifest.ts  generate-world.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/server/: Cargo.toml
src-tauri/crates/server/src/: commands.rs  data.rs  import.rs  main.rs  sim.rs  store.rs
(+1642 files in other folders)
