[package]
name = "olmanager-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "olmanager-server"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
ofm_core = { path = "../ofm_core" }
engine = { path = "../engine" }
db = { path = "../db" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
